update gitignore for current deployment context

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ deployment_context.tfvars
 **/.DS_Store
 tfbackend.tf.bak
 .idea
+# Ignore the active deployment context profile
+deployment_context.auto.tfvars
