--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ tfbackend.tf.bak
 # Ignore the active deployment context profile
 deployment_context.auto.tfvars
 .vscode
+# Ignore possibly present credentials files
+credentials/*
