--- a/modules/prometheus/config/compose.yml
+++ b/modules/prometheus/config/compose.yml
@@ -22,7 +22,7 @@ services:
       - '9090:9090'
     restart: unless-stopped
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /opt/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus-data:/prometheus
     command:
       - '--web.enable-lifecycle'
