--- a/modules/prometheus/config/compose.yml
+++ b/modules/prometheus/config/compose.yml
@@ -24,9 +24,12 @@ services:
     volumes:
       - /opt/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus-data:/prometheus
+      - /opt/prometheus/open-targets-eu-dev-3570d8fdec04.json:/etc/prometheus/application_default_credentials.json
     command:
       - '--web.enable-lifecycle'
       - '--config.file=/etc/prometheus/prometheus.yml'
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/etc/prometheus/application_default_credentials.json
 
   grafana:
     image: grafana/grafana:latest
