--- a/modules/prometheus/config/prometheus.yml
+++ b/modules/prometheus/config/prometheus.yml
@@ -1,9 +1,18 @@
 global:
   scrape_interval: 15s
 scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
+  - job_name: 'api'
+    gce_sd_configs:
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
+        port: 8080
   - job_name: 'node'
-    static_configs:
-      - targets: ['10.132.0.97:9100']
+    gce_sd_configs:
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
+        port: 9100
+  - job_name: 'prometheus'
+    gce_sd_configs:
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
+        port: 9090
