--- a/modules/prometheus/config/prometheus.yml
+++ b/modules/prometheus/config/prometheus.yml
@@ -3,16 +3,13 @@ global:
 scrape_configs:
   - job_name: 'api'
     gce_sd_configs:
-      - zone: europe-west1-b
-        project: open-targets-eu-dev
+      - project: open-targets-eu-dev
         port: 8080
   - job_name: 'node'
     gce_sd_configs:
-      - zone: europe-west1-b
-        project: open-targets-eu-dev
+      - project: open-targets-eu-dev
         port: 9100
   - job_name: 'prometheus'
     gce_sd_configs:
-      - zone: europe-west1-b
-        project: open-targets-eu-dev
+      - project: open-targets-eu-dev
         port: 9090
