--- a/modules/prometheus/config/prometheus.yml
+++ b/modules/prometheus/config/prometheus.yml
@@ -3,13 +3,31 @@ global:
 scrape_configs:
   - job_name: 'api'
     gce_sd_configs:
-      - project: open-targets-eu-dev
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
         port: 8080
   - job_name: 'node'
     gce_sd_configs:
-      - project: open-targets-eu-dev
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
         port: 9100
   - job_name: 'prometheus'
     gce_sd_configs:
-      - project: open-targets-eu-dev
+      - zone: europe-west1-b
+        project: open-targets-eu-dev
+        port: 9090
+  - job_name: 'api2'
+    gce_sd_configs:
+      - zone: europe-west1-d
+        project: open-targets-eu-dev
+        port: 8080
+  - job_name: 'node2'
+    gce_sd_configs:
+      - zone: europe-west1-d
+        project: open-targets-eu-dev
+        port: 9100
+  - job_name: 'prometheus2'
+    gce_sd_configs:
+      - zone: europe-west1-d
+        project: open-targets-eu-dev
         port: 9090
