--- a/modules/prometheus/config/compose.yml
+++ b/modules/prometheus/config/compose.yml
@@ -40,3 +40,4 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
       - /opt/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
+      - /opt/grafana/dashboards:/etc/grafana/provisioning/dashboards
