--- a/modules/prometheus/config/datasource.yml
+++ b/modules/prometheus/config/datasource.yml
@@ -6,3 +6,5 @@ datasources:
     access: proxy
     url: http://prometheus:9090
     isDefault: true
+    editable: false
+    uid: prometheusdatasource
