update node exporter

--- a/modules/elasticsearch/config/compose.yml
+++ b/modules/elasticsearch/config/compose.yml
@@ -33,7 +33,7 @@ services:
     ports:
     - "9114:9114"
   node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
+    image: ${NODE_EXPORTER_IMAGE}
     container_name: node_exporter
     command:
       - '--path.rootfs=/host'
