--- a/modules/openai-api/config/compose.yml
+++ b/modules/openai-api/config/compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - OPENAI_TOKEN=$${secret_value}
   node_exporter:
-    image: quay.io/prometheus/node-exporter:latest
+    image: ${node_exporter_image}
     container_name: node_exporter
     command:
       - '--path.rootfs=/host'
