enable updates while on dev

--- a/modules/prometheus/config/dashboards.yml
+++ b/modules/prometheus/config/dashboards.yml
@@ -6,7 +6,7 @@ providers:
     type: file
     disableDeletion: true
     updateIntervalSeconds: 30
-    allowUiUpdates: false
+    allowUiUpdates: true
     options:
       path: /opt/grafana/dashboards
       foldersFromFilesStructure: true
