--- a/modules/elasticsearch/config/cloud-init.yaml
+++ b/modules/elasticsearch/config/cloud-init.yaml
@@ -5,6 +5,17 @@ users:
     uid: 2000
 
 write_files:
+  - path: /etc/systemd/system/config-firewall.service
+    permissions: 0644
+    owner: root
+    content: |
+      [Unit]
+      Description=Configures the host firewall
+
+      [Service]
+      Type=oneshot
+      RemainAfterExit=true
+      ExecStart=/sbin/iptables -A INPUT -p tcp --dport 9100 -j ACCEPT
   - path: /etc/systemd/system/nodeexporter.service
     permissions: 0644
     owner: root
@@ -42,6 +53,7 @@ runcmd:
   export JVM_SIZE_HALF=`expr $MACHINE_SIZE / 2097152`
   echo $JVM_SIZE_HALF > /tmp/jvm_size_half
   systemctl daemon-reload
+  systemctl start config-firewall.service
   systemctl start cloudservice.service
   systemctl start nodeexporter.service
   systemctl start esexporter.service
