--- a/modules/clickhouse/config/cloud-init.yaml
+++ b/modules/clickhouse/config/cloud-init.yaml
@@ -36,11 +36,30 @@ write_files:
       [Service]
       ExecStart=/usr/bin/docker run --rm -d --name otp-ch --log-driver=gcplogs -p 9000:9000 -p 8123:8123 -p 9363:9363 -v ${CH_DATA_VOLUME}/config.d:/etc/clickhouse-server/config.d -v ${CH_DATA_VOLUME}/users.d:/etc/clickhouse-server/users.d -v ${CH_DATA_VOLUME}/data:/var/lib/clickhouse --ulimit nofile=262144:262144 ${DOCKER_IMAGE_CLICKHOUSE}
 
+  
+  - path: /etc/systemd/system/alloy.service
+    permissions: 0644
+    owner: root
+    content: |
+      [Unit]
+      Description=Start alloy to gather container logs and send them to the loki server
+
+      [Service]
+      ExecStart=docker run -d --name alloy --rm -p 12345:12345 -p 4317:4317 -p 4318:4318 --add-host host.docker.internal:host-gateway --network=observality-network --network-alias=gateway -v /var/run/docker.sock:/var/run/docker.sock -v /home/cloudservice/logs-config/config.alloy:/etc/alloy/config.alloy ${DOCKER_IMAGE_ALLOY} run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+
 runcmd:
-- systemctl daemon-reload
-- systemctl start config-firewall.service
-- systemctl start cloudservice.service
-- systemctl start nodeexporter.service
+- |
+  cd /home/cloudservice
+  mkdir -p logs-config
+  wget --header='Metadata-Flavor: Google' 'http://metadata.google.internal/computeMetadata/v1/instance/attributes/config-alloy'
+  mv config-alloy logs-config/config.alloy
+  docker network create observality-network
+- |
+  systemctl daemon-reload
+  systemctl start config-firewall.service
+  systemctl start cloudservice.service
+  systemctl start nodeexporter.service
+  systemctl start alloy.service
 
 bootcmd:
 - fsck.ext4 -tvy ${GCP_DEVICE_DISK_PREFIX}${DATA_DISK_DEVICE_NAME_CH}
