--- a/modules/webapp/config/cloud-init.yaml
+++ b/modules/webapp/config/cloud-init.yaml
@@ -36,8 +36,25 @@ write_files:
       [Service]
       ExecStart=/usr/bin/docker run --name=ot_webapp -d --log-driver=gcplogs -p 8080:8080 ${env_vars} ghcr.io/opentargets/ot-ui-apps:${webapp_image_version}
 
+  - path: /etc/systemd/system/alloy.service
+    permissions: 0644
+    owner: root
+    content: |
+      [Unit]
+      Description=Start alloy to gather container logs and send them to the loki server
+
+      [Service]
+      ExecStart=docker run -d --name alloy --rm -p 12345:12345 -p 4317:4317 -p 4318:4318 --add-host host.docker.internal:host-gateway -v /var/run/docker.sock:/var/run/docker.sock -v /home/cloudservice/logs-config/config.alloy:/etc/alloy/config.alloy ${alloy_image} run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+
 runcmd:
-- systemctl daemon-reload
-- systemctl start config-firewall.service
-- systemctl start webapp.service
-- systemctl start nodeexporter.service
+- |
+  cd /home/cloudservice
+  mkdir -p logs-config
+  wget --header='Metadata-Flavor: Google' 'http://metadata.google.internal/computeMetadata/v1/instance/attributes/config-alloy'
+  mv config-alloy logs-config/config.alloy
+- |
+  systemctl daemon-reload
+  systemctl start config-firewall.service
+  systemctl start webapp.service
+  systemctl start nodeexporter.service
+  systemctl start alloy.service
